--- a/app/views/room_diagram/index.html.erb
+++ b/app/views/room_diagram/index.html.erb
@@ -48,9 +48,134 @@
   </div>
 </div>
 
-<!--Modal đặt phòng nhanh thao tác với phòng-->
-<!--<div class="modal-dialog modal-dialog-centered">-->
-<!--</div>-->
+<!-- Màn hình modal đặt hàng nhanh -->
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#quickResModal">
+  Launch demo modal
+</button>
+
+<div class="modal fade" id="quickResModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Nhận phòng nhanh</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <table class="table">
+          <tbody>
+          <tr>
+            <td>
+              <div class="d-flex justify-content-end">
+                <p class="col-3">Tên khách</p>
+                <div class="col-7 form-group">
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                  <small id="emailHelp" class="form-text text-muted">Email helpers</small>
+                </div>
+              </div>
+            </td>
+            <td>
+              <div class="d-flex d-flex">
+                <p class="col-3">Tên khách</p>
+                <div class="col-7 form-group">
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                  <small id="emailHelp" class="form-text text-muted">Email helpers</small>
+                </div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="d-flex d-flex justify-content-end">
+                <p class="col-3">Tên khách</p>
+                <div class="col-7 form-group">
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                  <small id="emailHelp" class="form-text text-muted">Email helpers</small>
+                </div>
+              </div>
+            </td>
+            <td>
+              <div class="d-flex d-flex">
+                <p class="col-3">Tên khách</p>
+                <div class="col-7 form-group">
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                  <small id="emailHelp" class="form-text text-muted">Email helpers</small>
+                </div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="d-flex d-flex justify-content-end">
+                <p class="col-3">Tên khách</p>
+                <div class="col-7 form-group">
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                  <small id="emailHelp" class="form-text text-muted">Email helpers</small>
+                </div>
+              </div>
+            </td>
+            <td>
+              <div class="d-flex d-flex">
+                <p class="col-3">Tên khách</p>
+                <div class="col-7 form-group">
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                  <small id="emailHelp" class="form-text text-muted">Email helpers</small>
+                </div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="d-flex justify-content-end">
+                <p class="col-3">Tên khách</p>
+                <div class="col-7 form-group">
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                  <small id="emailHelp" class="form-text text-muted">Email helpers</small>
+                </div>
+              </div>
+            </td>
+            <td>
+              <div class="d-flex">
+                <p class="col-3">Tên khách</p>
+                <div class="col-7 form-group">
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                  <small id="emailHelp" class="form-text text-muted">Email helpers</small>
+                </div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="d-flex justify-content-end">
+                <p class="col-3">Tên khách</p>
+                <div class="col-7 form-group">
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                  <small id="emailHelp" class="form-text text-muted">Email helpers</small>
+                </div>
+              </div>
+            </td>
+            <td>
+              <div class="d-flex">
+                <p class="col-3">Tên khách</p>
+                <div class="col-7 form-group">
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                  <small id="emailHelp" class="form-text text-muted">Email helpers</small>
+                </div>
+              </div>
+            </td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 <div>
   <nav class="page-section" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
     <div class="row">
