Update button bootstrap

--- a/app/views/room_types/_form.html.erb
+++ b/app/views/room_types/_form.html.erb
@@ -100,7 +100,7 @@
   </div>
 
   <div class="actions button_submit">
-    <%= form.submit %>
+    <%= form.submit :class => 'btn btn-primary' %>
   </div>
 </div>
 </center>
