Using devise for devise user management Adding alert partial Adding Header with sign in, sign up, edit profile, sign out buttons Show all collapsed dropdown-item in sidebar. Adding controller: Need to log in before using any function. Lock hover-transition room-diagram temporaily

--- a/app/views/room_diagram/index.html.erb
+++ b/app/views/room_diagram/index.html.erb
@@ -515,11 +515,11 @@
         //       $(this).closest('.card').toggleClass('pushObject');
         //
         // });
-        $('.card').hover(function () {
-            if (!$('body').hasClass('modal-open')) // Khi modal mở, đang removeClass pushobject, thì chuột hover => lên lại => xóa
-                $(this).toggleClass('pushObject');
-
-        });
+        // $('.card').hover(function () {
+        //     if (!$('body').hasClass('modal-open')) // Khi modal mở, đang removeClass pushobject, thì chuột hover => lên lại => xóa
+        //         $(this).toggleClass('pushObject');
+        //
+        // });
     }
     function cardClick(){
         $('*[data-target="#roomModal"]').click(function(event) {
