--- a/app/views/room_diagram/quick_reserve_room.js.erb
+++ b/app/views/room_diagram/quick_reserve_room.js.erb
@@ -1,7 +1,7 @@
 $("body").append("<%= escape_javascript(render "modal", :formats => [:html]) %>");
 $("#quickResModal").modal();
 
-
+//Using layout/modal. But the problem here is the modal id
 //$("body").append("<%= escape_javascript(render "layouts/modal", :formats => [:html]) %>");
 //$("#partial").append("<%= escape_javascript(render "quick_reserve_room", :formats => [:html]) %>")
 //$("#modal-id").modal();
