--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,29 +1,40 @@
-<nav class="navbar" role="navigation" aria-label="main navigation">
-  <div class="navbar-brand">
-    <div class="navbar-item">
-      <%= link_to root_path do %>
-      <%= image_tag('https://bulma.io/images/bulma-logo.png', height: '28', width: '112') %>
-      <% end %>
-    </div>
-    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-    </a>
-  </div>
+<%= stylesheet_link_tag "header" %>
+<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+  <div class="container-fluid">
+    <h1>
+      <%= link_to 'Splash', root_path, class:"nav-brand" %>
+    </h1>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="d-flex is-justify-content-flex-end">
+      <ul class="navbar-nav mr-auto">
+        <% if user_signed_in? %>
+          <li class="nav-item dropdown">
+            <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <i class="fa fa-user-circle fa-2x"></i>
+            </a>
 
-  <div id="navbarBasicExample" class="navbar-menu">
-    <div class="navbar-end">
-      <div class="navbar-item">
-        <div class="buttons">
-          <a class="button is-primary">
-            <strong>Sign up</strong>
-          </a>
-          <a class="button is-light">
-            Log in
-          </a>
-        </div>
-      </div>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <%= link_to edit_user_registration_path, class:"dropdown-item" do %>
+                <i class="fa fa-edit "></i> Edit Profile
+              <% end %>
+              <%= link_to destroy_user_session_path, method: :delete, class:"dropdown-item" do %>
+                <i class="fa fa-sign-out-alt "></i> Sign Out
+              <% end %>
+            </div>
+          </li>
+          <li>
+          </li>
+        <% else %>
+          <li>
+            <%= link_to 'Sign In', new_user_session_path, class:"btn btn-primary" %>
+          </li>
+          <li>
+            <%= link_to 'Sign Up', new_user_registration_path, class:"btn btn-outline-primary me-2" %>
+          </li>
+        <% end %>
+      </ul>
     </div>
   </div>
 </nav>
