--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,67 +19,18 @@
   </head>
 
   <body>
+  <%= render 'layouts/header' %>
   <div class="wrapper d-flex align-items-stretch">
     <nav id="sidebar">
-      <div class="custom-menu">
-        <button type="button" id="sidebarCollapse" class="btn btn-primary">
-          <i class="fa fa-bars"></i>
-          <span class="sr-only">Toggle Menu</span>
-        </button>
-      </div>
-      <div class="p-4 pt-5">
-        <h1><a href="index.html" class="logo">Splash</a></h1>
-        <ul class="list-unstyled components mb-5">
-          <li class="active">
-            <%= link_to 'Trang Chủ', root_path, data: { toggle: 'tooltip' } %>
-          </li>
-          <li>
-            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Lễ Tân</a>
-            <ul class="collapse list-unstyled" id="homeSubmenu">
-              <li>
-                <%= link_to 'Sơ đồ phòng', room_diagram_path %>
-              </li>
-              <li>
-                <%= link_to 'Khách lẻ', root_path %>
-              </li>
-              <li>
-                <%= link_to 'Khách đoàn', root_path %>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <%= link_to 'Dịch Vụ', services_path, data: { toggle: 'tooltip' }, aria: { expanded: false} %>
-          </li>
-          <li>
-            <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Cấu hình</a>
-            <ul class="collapse list-unstyled" id="pageSubmenu">
-              <li>
-                <%= link_to 'Phòng', rooms_path %>
-              </li>
-              <li>
-                <%= link_to 'Loại phòng', room_types_path %>
-              </li>
-              <li>
-                <%= link_to 'Giá phòng', root_path %>
-              </li>
-              <li>
-                <%= link_to 'Dịch vụ', services_path %>
-              </li>
-              <li>
-                <%= link_to 'Nhân viên', employees_path %>
-              </li>
-              <li>
-                <%= link_to 'Khách hàng', clients_path %>
-              </li>
-            </ul>
-          </li>
-        </ul>
-
-      </div>
+      <%= render 'layouts/sidebar' %>
     </nav>
 
     <!-- Page Content  -->
     <div id="content" class="p-4 p-md-5 pt-5">
+      <% if notice %>
+        <%= render 'layouts/alerts' %>
+      <% end %>
+
       <%= yield %>
     </div>
   </div>
