Styling sign-in, sign-up view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,21 +19,25 @@
   </head>
 
   <body>
-  <%= render 'layouts/header' %>
-  <div class="wrapper d-flex align-items-stretch">
-    <nav id="sidebar">
-      <%= render 'layouts/sidebar' %>
-    </nav>
+  <% if user_signed_in? %>
+    <%= render 'layouts/header' %>
+    <div class="wrapper d-flex align-items-stretch">
+      <nav id="sidebar">
+        <%= render 'layouts/sidebar' %>
+      </nav>
+      <!-- Page Content  -->
+      <div id="content" class="p-4 p-md-5 pt-5">
+        <% if notice %>
+          <%= render 'layouts/alerts' %>
+        <% end %>
 
-    <!-- Page Content  -->
-    <div id="content" class="p-4 p-md-5 pt-5">
-      <% if notice %>
-        <%= render 'layouts/alerts' %>
-      <% end %>
-
-      <%= yield %>
+        <%= yield %>
+      </div>
     </div>
-  </div>
+  <% else %>
+    <%= yield %>
+  <% end %>
+
   <%= render 'layouts/footer' %>
 
     <script>
