--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,88 @@
-<h2>Sign up</h2>
+<%= stylesheet_link_tag "log_in" %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<div class="limiter">
+  <div class="container-login100" style="background-image: url('https://images.unsplash.com/photo-1517840901100-8179e982acb7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80');">
+    <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "login100-form validate-form"}) do |f| %>
+					<span class="login100-form-title p-b-49">
+						Chào mừng !
+					</span>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="wrap-input100 alidate-input m-b-23" data-validate = "Valid email is required: ex@abc.xyz">
+          <%= f.label :email, class: "label-input100" %><br />
+          <%= f.email_field :email, class:"input100", autofocus: true, autocomplete: "email" %>
+          <span class="focus-input100"></span>
+        </div>
+
+        <div class="wrap-input100 validate-input" data-validate="Password is required">
+          <%= f.label :password, class: "label-input100" %><br />
+          <%= f.password_field :password, class:"input100", autocomplete: "current-password" %>
+          <span class="focus-input100 "></span>
+          <%# if @minimum_password_length %>
+<!--            <em>(<%#= @minimum_password_length %> characters minimum)</em>-->
+<!--          <%# end %><br /><%# if @minimum_password_length %>-->
+<!--            <em>(<%#= @minimum_password_length %> characters minimum)</em>-->
+<!--          <%# end %><br />-->
+        </div>
+
+        <div class="wrap-input100 validate-input" data-validate="Password is required">
+          <%= f.label :password_confirmation, class: "label-input100" %><br />
+          <%= f.password_field :password_confirmation, class:"input100", autocomplete: "current-password" %>
+          <span class="focus-input100 "></span>
+
+        </div>
+
+        <div style="height: 50px">
+
+        </div>
+        <div class="container-login100-form-btn">
+          <div class="wrap-login100-form-btn">
+            <div class="login100-form-bgbtn"></div>
+            <button class="login100-form-btn">
+              Đăng ký
+            </button>
+          </div>
+        </div>
+
+        <div class="flex-col-c p-t-155">
+          <%= render "devise/shared/links" %>
+
+        </div>
+      <% end %>
+    </div>
   </div>
+</div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+<div id="dropDownSelect1"></div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+<!--<h2>Sign up</h2>-->
 
-<%= render "devise/shared/links" %>
+<%#= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%#= render "devise/shared/error_messages", resource: resource %>
+
+<!--  <div class="field">-->
+<!--    <%#= f.label :email %><br />-->
+    <%#= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<!--  </div>-->
+
+<!--  <div class="field">-->
+    <%#= f.label :password %>
+    <%# if @minimum_password_length %>
+<!--    <em>(<%#= @minimum_password_length %> characters minimum)</em>-->
+<!--    <%# end %><br />-->
+    <%#= f.password_field :password, autocomplete: "new-password" %>
+<!--  </div>-->
+
+<!--  <div class="field">-->
+<!--    <%#= f.label :password_confirmation %><br />-->
+    <%#= f.password_field :password_confirmation, autocomplete: "new-password" %>
+<!--  </div>-->
+
+<!--  <div class="actions">-->
+    <%#= f.submit "Sign up" %>
+<!--  </div>-->
+<%# end %>
+
+<%#= render "devise/shared/links" %>
