--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,5 @@
 <%= stylesheet_link_tag "log_in" %>
+<%= stylesheet_link_tag "sign_up" %>
 
 <div class="limiter">
   <div class="container-login100" style="background-image: url('https://images.unsplash.com/photo-1517840901100-8179e982acb7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80');">
@@ -15,27 +16,27 @@
           <span class="focus-input100"></span>
         </div>
 
-        <div class="wrap-input100 validate-input" data-validate="Password is required">
+        <div class="wrap-input100 validate-input m-b-23" data-validate="Password is required">
           <%= f.label :password, class: "label-input100" %><br />
           <%= f.password_field :password, class:"input100", autocomplete: "current-password" %>
           <span class="focus-input100 "></span>
           <%# if @minimum_password_length %>
-<!--            <em>(<%#= @minimum_password_length %> characters minimum)</em>-->
-<!--          <%# end %><br /><%# if @minimum_password_length %>-->
-<!--            <em>(<%#= @minimum_password_length %> characters minimum)</em>-->
-<!--          <%# end %><br />-->
+          <!--            <em>(<%#= @minimum_password_length %> characters minimum)</em>-->
+          <!--          <%# end %><br /><%# if @minimum_password_length %>-->
+          <!--            <em>(<%#= @minimum_password_length %> characters minimum)</em>-->
+          <!--          <%# end %><br />-->
         </div>
 
-        <div class="wrap-input100 validate-input" data-validate="Password is required">
+        <div class="wrap-input100 validate-input m-b-23" data-validate="Password is required">
           <%= f.label :password_confirmation, class: "label-input100" %><br />
           <%= f.password_field :password_confirmation, class:"input100", autocomplete: "current-password" %>
           <span class="focus-input100 "></span>
         </div>
 
-        <div class="wrap-input100 validate-input">
-          <%= f.label :id, class: "label-input100" %><br />
-          <%= f.text_field :employee_id, class:"input100" %>
-          <span class="focus-input100 "></span>
+        <div class="wrap-input100 validate-input employees-dropdown">
+          <%= f.label :Employee, class: "label-input100" %><br />
+          <%= f.collection_select(:employee_id, Employee.all, :id, :name, {include_blank: false}, { class: "btn btn-light dropdown-toggle" })  %>
+<!--          <span class="focus-input100 "></span>-->
         </div>
         <div style="height: 50px">
 
