Changing reservation, room_types, rooms tables Adding room price table Adding file seed Fixing error-views

--- a/app/views/room_prices/_form.html.erb
+++ b/app/views/room_prices/_form.html.erb
@@ -22,13 +22,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :begin_date %>
-    <%= form.datetime_select :begin_date %>
-  </div>
-
-  <div class="field">
-    <%= form.label :end_date %>
-    <%= form.datetime_select :end_date %>
+    <%= form.label :date %>
+    <%= form.datetime_select :date %>
   </div>
 
   <div class="field">
