--- a/app/views/room_prices/index.html.erb
+++ b/app/views/room_prices/index.html.erb
@@ -19,8 +19,7 @@
       <tr>
         <td><%= room_price.price %></td>
         <td><%= room_price.price_type %></td>
-        <td><%= room_price.begin_date %></td>
-        <td><%= room_price.end_date %></td>
+        <td><%= room_price.date %></td>
         <td><%= room_price.is_available %></td>
         <td><%= link_to 'Show', room_price %></td>
         <td><%= link_to 'Edit', edit_room_price_path(room_price) %></td>
