--- a/app/views/room_prices/show.html.erb
+++ b/app/views/room_prices/show.html.erb
@@ -10,14 +10,10 @@
   <%= @room_price.price_type %>
 </p>
 
-<p>
-  <strong>Begin date:</strong>
-  <%= @room_price.begin_date %>
-</p>
 
 <p>
   <strong>End date:</strong>
-  <%= @room_price.end_date %>
+  <%= @room_price.date %>
 </p>
 
 <p>
