--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -11,10 +11,6 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :beds %>
-    <%= form.number_field :beds %>
-  </div>
 
   <div class="field">
     <%= form.label :status %>
@@ -27,18 +23,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :capacity %>
-    <%= form.number_field :capacity %>
-  </div>
-
-  <div class="field">
-    <%= form.label :price %>
-    <%= form.text_field :price %>
-  </div>
-
-  <div class="field">
-    <%= form.label :roomType %>
-    <%= form.number_field :roomType %>
+    <%= form.label :room_type_id %>
+    <%= form.number_field :room_type_id %>
   </div>
 
   <div class="field">
