--- a/app/views/room_types/index.html.erb
+++ b/app/views/room_types/index.html.erb
@@ -4,44 +4,7 @@
   </div>
 <% end %>
 
-<center><h1 class="title">Room Types</h1></center>
-
-<!-- <table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Hour price</th>
-      <th>Date price</th>
-      <th>Past night price</th>
-      <th>Week price</th>
-      <th>Month price</th>
-      <th>Add adult price</th>
-      <th>Add child price</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @room_types.each do |room_type| %>
-      <tr>
-        <td><%= room_type.name %></td>
-        <td><%= room_type.hour_price %></td>
-        <td><%= room_type.date_price %></td>
-        <td><%= room_type.past_night_price %></td>
-        <td><%= room_type.week_price %></td>
-        <td><%= room_type.month_price %></td>
-        <td><%= room_type.add_adult_price %></td>
-        <td><%= room_type.add_child_price %></td>
-        <td><%= room_type.description %></td>
-        <td><%= link_to 'Show', room_type %></td>
-        <td><%= link_to 'Edit', edit_room_type_path(room_type) %></td>
-        <td><%= link_to 'Destroy', room_type, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table> -->
-
+<h1 class="title">Room Types</h1>
 
 <div class="roomtype_sum_container tRow">
     <div>
@@ -64,7 +27,6 @@
                     <%= room_type.name %>
                 </div>
                 <div>
-                    VND <%= room_type.hour_price %>
                 </div>
             </div>
         </div>
